@@ -27,7 +27,7 @@ use subs qw/filemenu_items hotkeysmenu_items categoriesmenu_items songsmenu_item
 # DESCRIPTION: A Perl/TK frontend for an MP3 database.  Written for
 #              ComedyWorx, Raleigh, NC.
 #              http://www.comedyworx.com/
-# CVS ID: $Id: mrvoice.pl,v 1.119 2002/05/13 18:40:17 minter Exp $
+# CVS ID: $Id: mrvoice.pl,v 1.120 2002/05/16 14:03:33 minter Exp $
 # CHANGELOG:
 #   See ChangeLog file
 # CREDITS:
@@ -108,7 +108,7 @@ else
 
 #####
 
-my $version = "1.5.1";			# Program version
+my $version = "1.5.2";			# Program version
 $status = "Welcome to Mr. Voice version $version";		
 
 # Define 32x32 XPM icon data
@@ -867,7 +867,7 @@ sub delete_song
 
 sub show_about
 {
-  $rev = '$Revision: 1.119 $';
+  $rev = '$Revision: 1.120 $';
   $rev =~ s/.*(\d+\.\d+).*/$1/;
   infobox($mw, "About Mr. Voice","Mr. Voice Version $version (Revision: $rev)\n\nBy H. Wade Minter <minter\@lunenburg.org>\n\nURL: http://www.lunenburg.org/mrvoice/\n\n(c)2001, Released under the GNU General Public License");
 }
